# shared-i2c-rtic-exercise

./: .gitignore  Cargo.toml  README.md  flash-and-debug.gdb  memory.x
.cargo/: config
src/: i2c_proxy.rs  main.rs  scoped_task_spawn_provider.rs  some_driver.rs
