[package]
name = "shared-i2c-rtic-exercise"
version = "0.1.0"
authors = ["Glaeqen <glaeqen@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
lm3s6965 = "0.1.3"
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"

[dependencies.panic-semihosting]
version = "0.5.3"
features = ["exit"]

[[bin]]
name = "shared-i2c-rtic-exercise"
test = false
bench = false